--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@fortawesome/free-solid-svg-icons": "5.5.0",
         "@ng-bootstrap/ng-bootstrap": "4.0.0",
         "bootstrap": "4.1.3",
+        "bootswatch": "^4.2.1",
         "core-js": "2.5.7",
         "moment": "2.22.2",
         "ng-jhipster": "0.5.6",
@@ -27,10 +28,10 @@
         "ngx-infinite-scroll": "6.0.1",
         "ngx-webstorage": "2.0.1",
         "rxjs": "6.3.3",
-        "swagger-ui": "2.2.10",
         "sockjs-client": "1.3.0",
-        "webstomp-client": "1.2.6",
+        "swagger-ui": "2.2.10",
         "tslib": "1.9.3",
+        "webstomp-client": "1.2.6",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
@@ -68,31 +69,31 @@
         "jest-sonar-reporter": "2.0.0",
         "lint-staged": "8.1.0",
         "merge-jsons-webpack-plugin": "1.0.18",
-        "mocha": "5.2.0",
         "mini-css-extract-plugin": "0.4.5",
+        "mocha": "5.2.0",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
+        "postcss-loader": "3.0.0",
         "prettier": "1.15.2",
         "protractor": "5.4.1",
         "reflect-metadata": "0.1.12",
         "rimraf": "2.6.2",
+        "sass": "1.15.1",
+        "sass-loader": "7.1.0",
         "simple-progress-webpack-plugin": "1.1.2",
         "style-loader": "0.23.1",
         "terser-webpack-plugin": "1.1.0",
         "thread-loader": "1.2.0",
         "to-string-loader": "1.1.5",
-        "ts-node": "7.0.1",
         "ts-loader": "5.3.0",
+        "ts-node": "7.0.1",
         "tslint": "5.11.0",
         "tslint-config-prettier": "1.16.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.1.6",
-        "sass": "1.15.1",
-        "sass-loader": "7.1.0",
-        "postcss-loader": "3.0.0",
         "webpack": "4.26.0",
         "webpack-cli": "3.1.2",
-        "webpack-dev-server": "3.1.10",
+        "webpack-dev-server": "^3.1.14",
         "webpack-merge": "4.1.4",
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
