Initial application generated by JHipster-5.7.1

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -31,6 +31,6 @@
         "otherModules": [],
         "enableTranslation": true,
         "nativeLanguage": "en",
-        "languages": ["en", "zh-cn"]
+        "languages": ["en", "zh-cn", "pt-br"]
     }
 }
