--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "swagger-ui": "2.2.10",
         "tslib": "1.9.3",
         "webstomp-client": "1.2.6",
+        "yarn": "^1.13.0",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
@@ -98,7 +99,8 @@
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0"
+        "write-file-webpack-plugin": "4.5.0",
+        "yarn": "^1.13.0"
     },
     "engines": {
         "node": ">=8.9.0"
@@ -118,6 +120,7 @@
         "clean-www": "rimraf build//www/app/{src,build/}",
         "e2e": "protractor src/test/javascript/protractor.conf.js",
         "postinstall": "webdriver-manager update --gecko false",
+        "install_yarn": "npm install yarn  -g",
         "start": "npm run webpack:dev",
         "start-tls": "npm run webpack:dev -- --env.tls",
         "serve": "npm run start",
